objects/Pricebook2.object
<CustomObject>
    <fields>
        <fullName>DefaultCurrencyIsoCode__c</fullName>
        <label>Default Currency ISO Code</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GroupFlag__c</fullName>
        <description>Identifies a Price Book to be for a Global ERP company. Previous: NOT ( CONTAINS ( $Setup.IntegrationSettings__c.LocalErpComps__c , TEXT ( ImcdCompany__c ) ) )</description>
        <formula>NOT (CONTAINS ( $Setup.IntegrationSettings__c.LocalProductCompanies__c , TEXT ( ImcdCompany__c ) ))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Identifies a Price Book to be for a Global ERP company.</inlineHelpText>
        <label>Group Flag</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ImcdCompany__c</fullName>
        <label>IMCD Company</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>IMCDCompany</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>IntegrationId__c</fullName>
        <description>The IntegrationId__c will be prepopulated with the IMCD Company&apos;s api value</description>
        <externalId>true</externalId>
        <label>IntegrationId</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <sharingModel>Private</sharingModel>
    <validationRules>
        <fullName>CurrencyCodeRequired</fullName>
        <active>true</active>
        <errorConditionFormula>AND (
   NOT (IsStandard),
   IsActive,
   ISBLANK (DefaultCurrencyIsoCode__c)
)</errorConditionFormula>
        <errorMessage>Non-standard Active Pricebooks require a Default Currency</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>IntegrationId</fullName>
        <active>true</active>
        <description>IntegrationId__c should equal the ImcdCompany__c value</description>
        <errorConditionFormula>AND (
   NOT (IsStandard),
   IsActive,
   IntegrationId__c &lt;&gt; TEXT(ImcdCompany__c)
)</errorConditionFormula>
        <errorMessage>IntegrationId should match the value of the ImcdCompany</errorMessage>
    </validationRules>
</CustomObject>